--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "code-runner",
   "title": "Code Runner",
   "description": "",
-  "icon": "extension-icon.png",
+  "icon": "logo.png",
   "author": "abdullahnettoor",
   "categories": [
     "Developer Tools"
